Upgrade to Micronaut 2.0.  Added support for flyway db migration.